--- a/navbar.css
+++ b/navbar.css
@@ -73,3 +73,26 @@
     opacity: 0.9;
     transform: translateY(-2px);
 }
+
+@media (max-width: 700px) {
+    .nav-container{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+    
+}
+@media (max-width: 557px) {
+    .nav-btns{
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+    }
+    .btn-secondary{
+        font-size: 0.7rem;
+    }
+    .btn-primary{
+        display: none;
+    }
+    
+}
