--- a/projects.css
+++ b/projects.css
@@ -122,6 +122,26 @@ body {
     margin-bottom: 2rem;
 }
 
+.toolbar-controls {
+    display: flex;
+    gap: 1rem;
+    width: 100%;
+    justify-content: right;
+}
+
+.toolbar-search,
+.toolbar-filter {
+    flex: 1 1 0;
+    max-width: 350px;
+}
+
+.toolbar-search input,
+.toolbar-filter select {
+    width: 100%;
+    min-width: 0;
+    box-sizing: border-box;
+}
+
 .toolbar-tabs {
     display: flex;
     flex-wrap: wrap;
@@ -349,6 +369,37 @@ body {
     .projects-grid {
         grid-template-columns: repeat(2, minmax(0, 1fr));
     }
+}
+
+@media (max-width: 700px) {
+    .nav-container{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+    .toolbar-controls {
+        flex-direction: column;
+        gap: 1rem;
+    }
+    .toolbar-search,
+    .toolbar-filter {
+        max-width: 100%;
+    }
+    
+}
+@media (max-width: 557px) {
+    .nav-btns{
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+    }
+    .btn-secondary{
+        font-size: 0.7rem;
+    }
+    .btn-primary{
+        display: none;
+    }
+    
 }
 
 @media (min-width: 1024px) {
