--- a/community.css
+++ b/community.css
@@ -382,6 +382,29 @@ body {
     }
 }
 
+@media (max-width: 700px) {
+    .nav-container{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+    
+}
+@media (max-width: 557px) {
+    .nav-btns{
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+    }
+    .btn-secondary{
+        font-size: 0.7rem;
+    }
+    .btn-primary{
+        display: none;
+    }
+    
+}
+
 @media (min-width: 1024px) {
     .projects-grid {
         grid-template-columns: repeat(3, minmax(0, 1fr));
