--- a/feedback.css
+++ b/feedback.css
@@ -171,3 +171,26 @@ button:hover {
     padding: 20px;
     }
 }
+
+@media (max-width: 700px) {
+    .nav-container{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+    
+}
+@media (max-width: 557px) {
+    .nav-btns{
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+    }
+    .btn-secondary{
+        font-size: 0.7rem;
+    }
+    .btn-primary{
+        display: none;
+    }
+    
+}
