--- a/user-profile.css
+++ b/user-profile.css
@@ -318,6 +318,29 @@ body {
     }
 }
 
+@media (max-width: 700px) {
+    .nav-container{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+    
+}
+@media (max-width: 557px) {
+    .nav-btns{
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+    }
+    .btn-secondary{
+        font-size: 0.7rem;
+    }
+    .btn-primary{
+        display: none;
+    }
+    
+}
+
 @media (max-width: 767px) {
     .skills-list-box {
         max-width: 100%;
