--- a/feedback.css
+++ b/feedback.css
@@ -194,3 +194,16 @@ button:hover {
     }
     
 }
+
+/* Adjust body padding for smaller screens */
+@media (max-width: 700px) {
+    body {
+        padding-top: 160px;
+    }
+}
+
+@media (max-width: 500px) {
+    body {
+        padding-top: 180px;
+    }
+}
